# solc

./: .clang-format  README.md  generictest.slr  lexertest.slr  meson.build  moretest.n  parsersmalltest.slr  parsertest.n  parsertest.slr  parsertestfull.slr  satest.n  satest.slr
include/: types.hpp
include/config/: config.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: ast.hpp  parser.hpp
include/sa/: sa.hpp  scope.hpp
include/semantic-analyzer/: sa.hpp  scope.hpp  types.hpp
include/solc/: defs.h  init.h
include/solc/lexer/: lexer.h  token.h
include/solc/parser/: ast.h  parser.h
include/symbols/: symbol.hpp  symbolscope.hpp  symboltable.hpp
libnlc/: logger.hpp  meson.build  types.cpp  util.cpp  util.hpp
libnlc/config/: config.cpp
libnlc/lexer/: lexer.cpp  token.cpp
libnlc/parser/: arglist.cpp  arrayelem.cpp  ast.cpp  callop.cpp  casestmt.cpp  decldef.cpp  deferstmt.cpp  enum.cpp  export.cpp  expr.cpp  funcarg.cpp  funcdecldef.cpp  funcdef.cpp  funcproto.cpp  funcptrtype.cpp  generic.cpp  gotostmt.cpp  idop.cpp  ifstmt.cpp  import.cpp  initlist.cpp  label.cpp  labelstmt.cpp  loopstmts.cpp  meson.build  module.cpp  parser.cpp  returnstmt.cpp  stmt.cpp  struct.cpp  switchstmt.cpp  template.cpp  top.cpp  type.cpp  typedef.cpp  typeraw.cpp  union.cpp  vardecldef.cpp  vismarker.cpp
libnlc/sa/: expr.cpp  find_type.cpp  initlist.cpp  meson.build  populate.cpp  prepass.cpp  sa.cpp  scope.cpp  type.cpp  typedef.cpp  vardecl.cpp  vardef.cpp
libnlc/semantic-analyzer/: expr.cpp  meson.build  sa.cpp  type.cpp  vardecl.cpp  vardef.cpp
libnlc/symbols/: meson.build  symbol.cpp  symboltable.cpp
libsolc/: global.c  global.h  hash.c  hash.h  init.c  logger.hpp  meson.build  size_policy.h  types.c  types.cpp  types.h  util.cpp  util.hpp
libsolc/allocs/: alloc_arena.c  alloc_arena.h  meson.build
libsolc/config/: config.cpp  meson.build
libsolc/containers/: array.c  array.h  hashset.c  hashset.h  hashtable.c  hashtable.h  meson.build  string.c  string.h  trie.c  trie.h  vector.c  vector.h
libsolc/lexer/: lexer.c  lexer.cpp  meson.build  token.c  token.cpp
libsolc/parser/: arglist.cpp  arrayelem.cpp  ast.c  ast.cpp  ast_func_type.h  ast_op_types.h  ast_private.h  callop.cpp  casestmt.cpp  decldef.cpp  deferstmt.cpp  enum.cpp  export.cpp  expr.cpp  extern.cpp  func.cpp  funcarg.cpp  funcdef.cpp  funcproto.cpp  funcptrtype.cpp  generic.cpp  genericcallop.cpp  genericnamespace.cpp  gotostmt.cpp  idop.cpp  ifstmt.cpp  import.cpp  initlist.cpp  label.cpp  labelstmt.cpp  loopstmts.cpp  macros.hpp  meson.build  module.cpp  parser.c  parser.cpp  parser_context.c  parser_context.h  parser_private.h  returnstmt.cpp  (+11 more)
libsolc/parser/ast/: ast_group_expr_operand.h  ast_group_generic.h  ast_group_initlist.h  ast_group_none.h  ast_group_stmt.h  ast_group_type.h  ast_group_var.h  meson.build
libsolc/parser/ast/expr_operand/: ast_expr_operand_access_member.c  ast_expr_operand_alignof.c  ast_expr_operand_array_element.c  ast_expr_operand_call.c  ast_expr_operand_cast.c  ast_expr_operand_generic_call.c  ast_expr_operand_identifier.c  ast_expr_operand_num.c  ast_expr_operand_numfloat.c  ast_expr_operand_sizeof.c  ast_expr_operand_string.c  ast_expr_operand_symbol.c  ast_expr_operand_void.c  meson.build
libsolc/parser/ast/generic/: ast_generic_func.c  ast_generic_func_explicit.c  ast_generic_namespace.c  ast_generic_placeholder_type.c  ast_generic_placeholder_type_list.c  ast_generic_struct.c  ast_generic_type.c  ast_generic_type_list.c  meson.build
libsolc/parser/ast/initlist/: ast_initlist_entry.c  ast_initlist_entry_explicit.c  ast_initlist_entry_explicit_array_element.c  meson.build
libsolc/parser/ast/none/: ast_attribute.c  ast_attribute_list.c  ast_enum.c  ast_enum_element.c  ast_err.c  ast_exported_func.c  ast_expr.c  ast_extern_func.c  ast_extern_vardecl.c  ast_func.c  ast_func_arglist.c  ast_func_explicit.c  ast_import.c  ast_initlist.c  ast_label.c  ast_module.c  ast_namespace.c  ast_none.c  ast_prefix_expr.c  ast_qualifier.c  ast_root.c  ast_struct.c  ast_typedef.c  ast_union.c  ast_variadic.c  ast_vismarker.c  meson.build
libsolc/parser/ast/stmt/: ast_stmt_block.c  ast_stmt_break.c  ast_stmt_case.c  ast_stmt_continue.c  ast_stmt_default.c  ast_stmt_defer.c  ast_stmt_dowhile.c  ast_stmt_else.c  ast_stmt_expr.c  ast_stmt_fallthrough.c  ast_stmt_for.c  ast_stmt_goto.c  ast_stmt_if.c  ast_stmt_label.c  ast_stmt_loop.c  ast_stmt_return.c  ast_stmt_switch.c  ast_stmt_while.c  meson.build
libsolc/parser/ast/type/: ast_type_array.c  ast_type_funcptr.c  ast_type_plain.c  ast_type_pointer.c  ast_type_typeof.c  meson.build
libsolc/parser/ast/var/: ast_var_decl.c  ast_var_def.c  meson.build
libsolc/parser/parser/: arglist.c  array_elem.c  attribs.c  block.c  break.c  continue.c  decldef.c  defer.c  dowhile.c  else.c  enum.c  expr.c  extern.c  fallthrough.c  for.c  func.c  generic.c  goto.c  if.c  import.c  initlist.c  label.c  loop.c  meson.build  module.c  return.c  stmt.c  struct.c  switch.c  top.c  type.c  typedef.c  union.c  vismarker.c  while.c
libsolc/sa/: expr.cpp  meson.build  populate.cpp  prepass.cpp  resolver.cpp  sa.cpp  scope.cpp  type.cpp
src/: argparser.hpp  args.c  args.h  color.h  errorhandler.c  errorhandler.h  info.c  info.h  main.c  main.cpp  meson.build
src/error_handler/: error_handler.cpp  error_handler.hpp  meson.build  sa_error.cpp
src/info/: info.cpp  info.hpp  meson.build
src/util/: meson.build  util.cpp  util.hpp
testre/: testre.n
