libsolc_src += [
  'libsolc/parser/parser.cpp',

  'libsolc/parser/arglist.cpp',
  'libsolc/parser/arrayelem.cpp',
  'libsolc/parser/ast.cpp',
  'libsolc/parser/callop.cpp',
  'libsolc/parser/casestmt.cpp',
  'libsolc/parser/decldef.cpp',
  'libsolc/parser/deferstmt.cpp',
  'libsolc/parser/enum.cpp',
  'libsolc/parser/export.cpp',
  'libsolc/parser/expr.cpp',
  'libsolc/parser/func.cpp',
  'libsolc/parser/funcarg.cpp',
  'libsolc/parser/funcptrtype.cpp',
  'libsolc/parser/generic.cpp',
  'libsolc/parser/genericcallop.cpp',
  'libsolc/parser/gotostmt.cpp',
  'libsolc/parser/idop.cpp',
  'libsolc/parser/ifstmt.cpp',
  'libsolc/parser/import.cpp',
  'libsolc/parser/initlist.cpp',
  'libsolc/parser/label.cpp',
  'libsolc/parser/labelstmt.cpp',
  'libsolc/parser/loopstmts.cpp',
  'libsolc/parser/module.cpp',
  'libsolc/parser/returnstmt.cpp',
  'libsolc/parser/stmt.cpp',
  'libsolc/parser/struct.cpp',
  'libsolc/parser/switchstmt.cpp',
  'libsolc/parser/top.cpp',
  'libsolc/parser/type.cpp',
  'libsolc/parser/typedef.cpp',
  'libsolc/parser/typeraw.cpp',
  'libsolc/parser/union.cpp',
  'libsolc/parser/vardecldef.cpp',
  'libsolc/parser/vismarker.cpp',
]
