libsolc_src += [
  'libsolc/parser/parser/arglist.c',
  'libsolc/parser/parser/array_elem.c',
  'libsolc/parser/parser/block.c',
  'libsolc/parser/parser/break.c',
  'libsolc/parser/parser/continue.c',
  'libsolc/parser/parser/decldef.c',
  'libsolc/parser/parser/defer.c',
  'libsolc/parser/parser/else.c',
  'libsolc/parser/parser/expr.c',
  'libsolc/parser/parser/func.c',
  'libsolc/parser/parser/generic.c',
  'libsolc/parser/parser/goto.c',
  'libsolc/parser/parser/if.c',
  'libsolc/parser/parser/import.c',
  'libsolc/parser/parser/initlist.c',
  'libsolc/parser/parser/label.c',
  'libsolc/parser/parser/module.c',
  'libsolc/parser/parser/return.c',
  'libsolc/parser/parser/struct.c',
  'libsolc/parser/parser/top.c',
  'libsolc/parser/parser/type.c',
  'libsolc/parser/parser/while.c',
]
