libsolc_src += [
  'libsolc/parser/ast/generic/ast_generic_func.c',
  'libsolc/parser/ast/generic/ast_generic_namespace.c',
  'libsolc/parser/ast/generic/ast_generic_placeholder_type.c',
  'libsolc/parser/ast/generic/ast_generic_placeholder_type_list.c',
  'libsolc/parser/ast/generic/ast_generic_struct.c',
  'libsolc/parser/ast/generic/ast_generic_type.c',
  'libsolc/parser/ast/generic/ast_generic_type_list.c',
]
