libsolc_src += [
  'libsolc/parser/ast/none/ast_enum.c',
  'libsolc/parser/ast/none/ast_enum_element.c',
  'libsolc/parser/ast/none/ast_err.c',
  'libsolc/parser/ast/none/ast_expr.c',
  'libsolc/parser/ast/none/ast_extern_func.c',
  'libsolc/parser/ast/none/ast_func.c',
  'libsolc/parser/ast/none/ast_func_arglist.c',
  'libsolc/parser/ast/none/ast_import.c',
  'libsolc/parser/ast/none/ast_initlist.c',
  'libsolc/parser/ast/none/ast_module.c',
  'libsolc/parser/ast/none/ast_namespace.c',
  'libsolc/parser/ast/none/ast_none.c',
  'libsolc/parser/ast/none/ast_prefix_expr.c',
  'libsolc/parser/ast/none/ast_qualifier.c',
  'libsolc/parser/ast/none/ast_root.c',
  'libsolc/parser/ast/none/ast_struct.c',
  'libsolc/parser/ast/none/ast_typedef.c',
  'libsolc/parser/ast/none/ast_union.c',
  'libsolc/parser/ast/none/ast_variadic.c',
]
