libsolc_src += [
  'libsolc/parser/ast/stmt/ast_stmt_block.c',
  'libsolc/parser/ast/stmt/ast_stmt_break.c',
  'libsolc/parser/ast/stmt/ast_stmt_case.c',
  'libsolc/parser/ast/stmt/ast_stmt_continue.c',
  'libsolc/parser/ast/stmt/ast_stmt_default.c',
  'libsolc/parser/ast/stmt/ast_stmt_defer.c',
  'libsolc/parser/ast/stmt/ast_stmt_dowhile.c',
  'libsolc/parser/ast/stmt/ast_stmt_else.c',
  'libsolc/parser/ast/stmt/ast_stmt_expr.c',
  'libsolc/parser/ast/stmt/ast_stmt_fallthrough.c',
  'libsolc/parser/ast/stmt/ast_stmt_for.c',
  'libsolc/parser/ast/stmt/ast_stmt_goto.c',
  'libsolc/parser/ast/stmt/ast_stmt_if.c',
  'libsolc/parser/ast/stmt/ast_stmt_label.c',
  'libsolc/parser/ast/stmt/ast_stmt_return.c',
  'libsolc/parser/ast/stmt/ast_stmt_switch.c',
  'libsolc/parser/ast/stmt/ast_stmt_while.c',
]
